--- a/css/main.css
+++ b/css/main.css
@@ -264,7 +264,7 @@ body {
 
 @media(max-width:467px) {
     .section {
-        padding: 29px 19px;
+        padding: 15px 19px;
         background-size: 300% 330px;
     }
     
@@ -301,6 +301,10 @@ body {
 
     .data-time {
         margin-left: -46px;
+    }
+    
+    body {
+        margin-top: 91px;
     }
 }
 
